[Software] Dominik's and Adreas comments implementation

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -204,6 +204,23 @@ keywords = "Global least-squares fit "
       url            = "https://github.com/ALLPix/allpix"
 }
 
+@online{allpixTwiki,
+      title          = "AllPix TWiki",
+      url            = "https://twiki.cern.ch/twiki/bin/view/Main/AllPix"
+}
+
+@phdthesis{Benoit:1474878,
+      author        = "Benoit, Mathieu and Lounis, A",
+      title         = "{Étude des détecteurs planaires pixels durcis aux
+                       radiations pour la mise à jour du détecteur de vertex
+                       d'ATLAS}",
+      school        = "U. Paris-Sud 11, Dept. Phys., Orsay",
+      year          = "2011",
+      reportNumber  = "LAL-11-118",
+      url           = "http://cds.cern.ch/record/1474878",
+      note          = "presented 10 Jun 2011",
+}
+
 @article{1748-0221-6-01-C01046,
   author =	 {D Turecek and T Holy and J Jakubek and S Pospisil
                   and Z Vykydal},
