--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -332,6 +332,19 @@ keywords = "Spectroscopy "
       url           = "http://cds.cern.ch/record/2054922",
 }
 
+@article{AlipourTehrani:2133128,
+      author        = "Alipour Tehrani, Niloufar and Benoit, Mathieu and
+                       Dannheim, Dominik and Firu, Elena and Kulis, Szymon and
+                       Redford, Sophie and Sicking, Eva",
+      title         = "{Test beam analysis of ultra-thin hybrid pixel detector
+                       assemblies with Timepix readout ASICs}",
+      month         = "Feb",
+      year          = "2016",
+      reportNumber  = "CLICdp-Note-2016-001",
+      url           = "http://cds.cern.ch/record/2133128",
+}
+
+
 @article{KRUMMENACHER1991527,
 title = "Pixel detectors with local intelligence: an IC designer point of view",
 journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment",
@@ -642,4 +655,29 @@ keywords = "Guard ring",
 keywords = "HV-CMOS",
 keywords = "CLICpix",
 keywords = "Geant4 simulations "
+}
+
+@article{BRUN199781,
+title = "ROOT — An object oriented data analysis framework",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment",
+volume = "389",
+number = "1",
+pages = "81 - 86",
+year = "1997",
+note = "",
+issn = "0168-9002",
+doi = "http://dx.doi.org/10.1016/S0168-9002(97)00048-X",
+url = "http://www.sciencedirect.com/science/article/pii/S016890029700048X",
+author = "Rene Brun and Fons Rademakers",
+abstract = "The ROOT system in an Object Oriented framework for large scale data analysis. ROOT written in C++, contains, among others, an efficient hierarchical OO database, a C++ interpreter, advanced statistical analysis (multi-dimensional histogramming, fitting, minimization, cluster finding algorithms) and visualization tools. The user interacts with ROOT via a graphical user interface, the command line or batch scripts. The command and scripting language is C++ (using the interpreter) and large scripts can be compiled and dynamically linked in. The OO database design has been optimized for parallel access (reading as well as writing) by multiple processes."
+}
+
+@online{scipyClustering,
+      title          = "SciPy hierarchical fclusterdata",
+      url            = "http://docs.scipy.org/doc/scipy/ reference/generated/scipy.cluster.hierarchy.fclusterdata.html"
+}
+
+@online{SciPyOptimizeMinimize,
+      title          = "SciPy optimize minimize",
+      url            = "http://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html"
 }
